@@ -14,6 +14,8 @@
 	<script src="src/plugins/remedial.js"></script>
 	<script src="src/parchment/error-handling.js"></script>
 	<script src="src/plugins/quetzal.js"></script>
+	<script src="src/gnusto/gnusto-engine.js"></script>
+	<script src="src/parchment/engine-runner.js"></script>
 	<script src="src/parchment/intro.js"></script>
 	<script src="src/parchment/file.js"></script>
 	<script src="src/parchment/ui.js"></script>
