@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="parchment.css">
 	<title>Parchment</title>
 	<script src="lib/jquery.min.js"></script>
+	<script src="lib/gnusto.min.js"></script>
 	<script src="lib/parchment.min.js"></script>
 </head>
 <body>
